	(twittering-effective-length): always use the length retrieved by
	'help/configuration' API. The function previously used the minimum
	of the length by the API and the original length. This causes
	failure in posting a tweet because the t.co URL wrapper
	automatically wraps all links as of October 10, 2011.

	* README.markdown: Fix a typo.

	* README.markdown: Update the document.

2012-03-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the condition of confirmation on posting
	a tweet. The variable `twittering-request-confirmation-on-posting'
	had been ignored on posting a reply. Thanks to Takashi Masuda who
	reported the problem.
	(twittering-edit-post-status): fix the condition of confirmation
	on posting a tweet.

	* twittering-mode.el: Support error messages formatted as JSON.
	(twittering-get-error-message): receive a new argument
	CONNECTION-INFO and support error messages sent as JSON.
	(twittering-http-get-default-sentinel): send CONNECTION-INFO to
	the function `twittering-get-error-message'.
	(twittering-http-get-list-sentinel-base): likewise.
	(twittering-http-post-default-sentinel): likewise.
	(twittering-http-post-destroy-status-sentinel): likewise.

	* twittering-mode.el: Parse a HTTP response body whose status code
	is 401 or 404.
	(twittering-get-error-message): try to parse a HTTP respose body
	whose status code is 401 or 404.

	* twittering-mode.el: Display an error message from the
	'help/configuration' API.
	(twittering-update-service-configuration-sentinel): display an
	error message in a HTTP response body.

	* twittering-mode.el: Record HTTP response headers on debug mode.
	(twittering-get-response-header): record the extracted HTTP
	response header if `twittering-debug-mode' is non-nil.

	* twittering-mode.el: Remove the function
	`twittering-make-field-properties'. It is unnecessary because
	`twittering-render-a-field' automatically add a field property.
	(twittering-get-common-properties): update the docstring.